Fixed blurred lines problem

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .wrapper {
   padding: 20px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 #canvas {
